// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusPickerWrapper > StatusPickerWrapper - Snapshots > matches snapshot with custom sideOffset 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  class="flex h-8 cursor-pointer items-center gap-1 p-0 focus-visible:border-none focus-visible:ring-0 focus-visible:outline-none"
  data-as-child="true"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  data-variant="ghost"
  type="button"
>
  <span
    class="text-base leading-6"
  >
    🌴
  </span>
  <span
    class="text-base leading-6 font-bold text-white"
  >
    Vacationing
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-6 transition-transform duration-300"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`StatusPickerWrapper > StatusPickerWrapper - Snapshots > matches snapshot with custom status 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  class="flex h-8 cursor-pointer items-center gap-1 p-0 focus-visible:border-none focus-visible:ring-0 focus-visible:outline-none"
  data-as-child="true"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  data-variant="ghost"
  type="button"
>
  <span
    class="text-base leading-6"
  >
    😊
  </span>
  <span
    class="text-base leading-6 font-bold text-white"
  >
    Working
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-6 transition-transform duration-300"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`StatusPickerWrapper > StatusPickerWrapper - Snapshots > matches snapshot with onStatusChange handler 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  class="flex h-8 cursor-pointer items-center gap-1 p-0 focus-visible:border-none focus-visible:ring-0 focus-visible:outline-none"
  data-as-child="true"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  data-variant="ghost"
  type="button"
>
  <span
    class="text-base leading-6"
  >
    🌴
  </span>
  <span
    class="text-base leading-6 font-bold text-white"
  >
    Vacationing
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-6 transition-transform duration-300"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;

exports[`StatusPickerWrapper > StatusPickerWrapper - Snapshots > matches snapshot with predefined status 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="dialog"
  class="flex h-8 cursor-pointer items-center gap-1 p-0 focus-visible:border-none focus-visible:ring-0 focus-visible:outline-none"
  data-as-child="true"
  data-slot="popover-trigger"
  data-state="closed"
  data-testid="popover-trigger"
  data-variant="ghost"
  type="button"
>
  <span
    class="text-base leading-6"
  >
    🌴
  </span>
  <span
    class="text-base leading-6 font-bold text-white"
  >
    Vacationing
  </span>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-down size-6 transition-transform duration-300"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</button>
`;
